# evedata

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .sqlfluff  .sqlfluffignore  .yamllint.yaml  Brewfile  CHANGELOG.md  CLAUDE.md  Dockerfile  Gemfile  LICENSE-CODE  Makefile  README.md  VISION.md  compose.yaml  dbt_project.yml  eve_words.txt  llms-full.txt  package-lock.yml  package.json  packages.yml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json  vitest.config.ts
docs/: CLAUDE.md  Makefile  mkdocs.stg.yml  mkdocs.yml  package.json  pyproject.toml  wrangler.toml
docs/.claude/: settings.json
docs/content/: changelog.md  faq.md  index.md  license.md  llms-full.txt  vision.md  why.md
docs/content/blog/: .authors.yml
docs/content/blog/posts/: announcing-evedata.md  hello-new-eden.md
docs/content/datasets/: index.md
docs/content/explanation/: index.md
docs/content/guides/: index.md
docs/content/reference/: glossary.md  index.md
docs/content/rest/: index.md
docs/content/sdks/: index.md
docs/content/tutorials/: index.md
docs/content/webhooks/: index.md
docs/content/websocket/: index.md
docs/includes/: abbreviations.md  links.md
docs/overrides/: main.html
infra/: .gitignore  .yamllint.yaml  CLAUDE.md  Makefile  README.md  package.json  pyproject.toml
infra/.claude/: settings.json
infra/.claude/agents/: ansible-automation-engineer.md
infra/ansible/: .ansible-lint  .vault-pass  .yamllint  Makefile  ansible.cfg  hosts.yml  requirements.yml
infra/ansible/collections/: requirements.yml
infra/ansible/group_vars/: all.yml  hzl.yml  prd.yml  stg.yml  vault.yml
infra/ansible/playbooks/: ansible_bootstrap.yml  argo-cd.yml  cloudflared.yml  helm.yml  hetzner-rescue-recon.yml  hostname.yml  kubernetes-deps.yml  microk8s.yml  op-connect.yml  setup_docker.yml  tailscale-operator.yml  tailscale.yml  test_cloudflare_ips_lookup.yml  ubuntu_bootstrap.yml
infra/ansible/playbooks/files/hzl/: op_connect_credentials.json
infra/ansible/playbooks/files/prd/: op_connect_credentials.json
infra/ansible/playbooks/files/stg/: op_connect_credentials.json
infra/ansible/plugins/lookup/: cloudflare_ips.py
infra/ansible/roles/ansible_bootstrap/: README.md
infra/ansible/roles/ansible_bootstrap/defaults/: main.yml
infra/ansible/roles/ansible_bootstrap/handlers/: main.yml
infra/ansible/roles/ansible_bootstrap/meta/: main.yml
infra/ansible/roles/ansible_bootstrap/tasks/: main.yml
infra/ansible/roles/argo_cd/: README.md  README_EGRESS_SERVICES.md  SPEC.md
infra/ansible/roles/argo_cd/defaults/: main.yml
infra/ansible/roles/argo_cd/handlers/: main.yml
infra/ansible/roles/argo_cd/meta/: main.yml
infra/ansible/roles/argo_cd/tasks/: egress-services.yml  helm-repo.yml  ingress.yml  install.yml  main.yml  namespace.yml  validate.yml
infra/ansible/roles/argo_cd/templates/: egress-services.yaml.j2  values.yaml.j2
infra/ansible/roles/cloudflared/: README.md
infra/ansible/roles/cloudflared/defaults/: main.yml
infra/ansible/roles/cloudflared/meta/: main.yml
infra/ansible/roles/cloudflared/tasks/: deployment.yml  main.yml  namespace.yml  secret.yml  validate.yml
infra/ansible/roles/docker/defaults/: main.yml
infra/ansible/roles/docker/handlers/: main.yml
infra/ansible/roles/docker/meta/: main.yml
infra/ansible/roles/docker/tasks/: main.yml
infra/ansible/roles/helm/: README.md
infra/ansible/roles/helm/defaults/: main.yml
infra/ansible/roles/helm/examples/: install-helm.yml
infra/ansible/roles/helm/handlers/: main.yml
infra/ansible/roles/helm/meta/: main.yml
infra/ansible/roles/helm/tasks/: main.yml
infra/ansible/roles/hetzner_rescue_recon/defaults/: main.yml
infra/ansible/roles/hetzner_rescue_recon/handlers/: main.yml
infra/ansible/roles/hetzner_rescue_recon/meta/: main.yml
infra/ansible/roles/hetzner_rescue_recon/tasks/: main.yml
infra/ansible/roles/hetzner_rescue_recon/templates/: recon_index.j2  rescue_recon_report.j2
infra/ansible/roles/hostname/: README.md
infra/ansible/roles/hostname/defaults/: main.yml
infra/ansible/roles/hostname/meta/: main.yml
infra/ansible/roles/hostname/tasks/: main.yml
infra/ansible/roles/kubernetes/: README.md
infra/ansible/roles/kubernetes/defaults/: main.yml
infra/ansible/roles/kubernetes/handlers/: main.yml
infra/ansible/roles/kubernetes/meta/: main.yml
infra/ansible/roles/kubernetes/tasks/: install.yml  main.yml  verify.yml
infra/ansible/roles/kubernetes/vars/: main.yml
infra/ansible/roles/microk8s/: README.md  SPEC.md
infra/ansible/roles/microk8s/defaults/: main.yml
infra/ansible/roles/microk8s/handlers/: main.yml
infra/ansible/roles/op_connect/: CHANGELOG.md  README.md  SPEC.md
infra/ansible/roles/tailscale_operator/: README.md  SPEC.md
infra/references/: installimage-usage.txt
infra/src/evedata_infra/: __init__.py
infra/src/evedata_infra/_admin/: _cli.py
infra/src/evedata_infra/cli/: __init__.py  _app.py
infra/src/evedata_infra/ctl/: __init__.py
infra/terraform/gcp/bootstrap/: .terraform.lock.hcl  main.tf
infra/tofu/gcp/bootstrap/: .terraform.lock.hcl
platform/extractors/: Makefile  README.md  pyproject.toml
platform/extractors/src/evedata_platform_extractors/: __init__.py  _constants.py  _paths.py
platform/reference/: CLAUDE.md  Makefile  README.md  pyproject.toml
platform/reference/.claude/: settings.json
platform/reference/dbt/: .sqlfluff  .user.yml  CLAUDE.md  Makefile  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
platform/reference/dbt/.claude/: settings.json
platform/reference/dbt/macros/: test_row_count_equals.sql
platform/reference/dbt/models/: esi.yml  hde.yml  sde.yml
platform/reference/docs/project/: prd.md  sdd.md
platform/reference/src/evedata_reference/: __init__.py  _constants.py  _exceptions.py  _paths.py  sde.py
platform/utils/: pyproject.toml
platform/utils/src/evedata_platform_utils/: datetime.py  http.py  zip.py
platform/utils/src/evedata_utils/: __init__.py  json.py  yaml.py
(+1023 files in other folders)
