[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[project]
name = "evedata-monorepo"
version = "0.0.0"
description = "EVEData monorepo"
readme = "README.md"
authors = [{ name = "Corvin Vale", email = "corvin@valeant.space" }]
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.13"
dependencies = [
  "evedata-platform-admin",
  "evedata-platform-admin-core",
  "evedata-platform-core",
  "evedata-platform-datasets",
  "evedata-docs",
  "evedata-platform-extractors",
  "evedata-infra",
  "evedata-platform-rest",
  "evedata-platform-rest-core",
  "evedata-platform-static",
  "evedata-platform-transformations",
  "evedata-platform-utils",
]

[dependency-groups]
dev = [
  "codespell[toml]>=2.4.1",
  "commitizen>=4.8.3",
  "cz-path>=0.0.1",
  "pre-commit>=4.2.0",
  "pyright>=1.1.403",
  "ruff>=0.12.4",
  "shandy-sqlfmt[jinjafmt]>=0.27.0",
  "sqlfluff-templater-dbt>=3.4.2",
  "sqlfluff>=3.4.2",
  "workers-py>=1.1.3",
  "yamllint>=1.37.1",
]

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words = "eve_words.txt"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
gpg_sign = true
annotated_tags = true
changelog_merge_prerelease = true

[tool.pyright]
strict = [
  "platform/admin/src",
  "platform/admin/tests",
  "platform/admin-core/src",
  "platform/admin-core/tests",
  "platform/core/src",
  "platform/core/tests",
  "platform/datasets/src",
  "platform/datasets/tests",
  "platform/extractors/src",
  "platform/extractors/tests",
  "platform/rest/src",
  "platform/rest/tests",
  "platform/rest-core/src",
  "platform/rest-core/tests",
  "platform/static/src",
  "platform/static/tests",
  "platform/transformations/src",
  "platform/transformations/tests",
  "platform/utils/src",
  "platform/utils/tests",
  "platform/transformations/src",
]
venvPath = "."
venv = ".venv"
exclude = ["**/.*", "**/__pycache__", "**/node_modules", "**/experiments"]

[tool.pytest.ini_options]
addopts = ["--tb", "short", "-n", "auto"]
asyncio_mode = "auto"
consider_namespace_packages = true
env = { "EVEDATA_ENV" = "test" }
filterwarnings = ["error"]
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]
target-version = "py313"
extend-exclude = [
  "**/data",
  "**/dbt_internal_packages",
  "**/dbt_packages",
  "**/logs",
  "**/target",
  "**/tmp",
]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "A",     # flake8-builtins
  "ARG",   # flake8-unused-arguments
  "ASYNC", # flake8-async
  "B",     # bugbear
  "BLE",   # flake8-blind-except
  "C4",    # flake8-comprehensions
  "D",     # pydocstyle
  "DTZ",   # flake8-datetimez
  "E",     # pycodestyle (error)
  "EM",    # flake8-errmsg
  "EXE",   # flake8-executable
  "F",     # pyflakes
  "FAST",  # FastAPI
  "FBT",   # flake8-boolean-trap
  "FURB",  # refurb
  "G",     # flake8-logging-format
  "I",     # isort
  "ICN",   # flake8-import-conventions
  "ISC",   # flake8-implicit-str-concat
  "LOG",   # flake8-logging
  "N",     # pep8-naming
  "PERF",  # Perflint
  "PGH",   # pygrep-hooks
  "PIE",   # flake8-pie
  "PL",    # pylint
  "PT",    # flake8-pytest-style
  "PTH",   # flake8-use-pathlib
  "PYI",   # flake8-pyi
  "RET",   # flake8-return
  "RUF",   # Ruff-specific rules
  "S",     # flake8-bandit
  "SIM",   # flake8-simplify
  "SLF",   # flake8-self
  "SLOT",  # flake8-slots
  "TC",    # flake8-type-checking
  "TD",    # flake8-todos
  "TID",   # flake8-tidy-imports
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "TRY",   # tryceratops
  "UP",    # pyupgrade
]
pydocstyle = { convention = "google" }

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
forced-separate = ["tests"]

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true
runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
  "sqlalchemy.orm.DeclarativeBase",
]
runtime-evaluated-decorators = ["pydantic.validate_call", "attrs.define"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
  # Allow Pydantic's `@validator` decorator to trigger class method treatment.
  "pydantic.validator",
  # Allow SQLAlchemy's dynamic decorators, like `@field.expression`, to trigger class method treatment.
  "declared_attr",
  "expression",
  "comparator",
]

[tool.ruff.lint.per-file-ignores]
"**/__main__.py" = ["D100"]
"**/tests/**" = ["D", "PLR2004", "S101"]
"*.ipynb" = ["T20"]

[tool.sqlfmt]
exclude = [
  "**/dbt_internal_packages/**/*",
  "**/dbt_packages/**/*",
  "**/snapshots/**/*",
  "**/target/**/*",
  "**/tmp/**/*",
]

[tool.uv]
default-groups = ["dev"]
package = false
required-version = ">=0.8.0,<0.9"

[tool.uv.sources]
evedata-platform-admin = { workspace = true }
evedata-platform-admin-core = { workspace = true }
evedata-platform-core = { workspace = true }
evedata-platform-datasets = { workspace = true }
evedata-docs = { workspace = true }
evedata-platform-extractors = { workspace = true }
evedata-infra = { workspace = true }
evedata-platform-rest = { workspace = true }
evedata-platform-rest-core = { workspace = true }
evedata-platform-static = { workspace = true }
evedata-platform-utils = { workspace = true }
evedata-platform-transformations = { workspace = true }

[tool.uv.workspace]
members = [
  "docs",
  "infra",
  "platform/admin",
  "platform/admin-core",
  "platform/core",
  "platform/datasets",
  "platform/extractors",
  "platform/rest",
  "platform/rest-core",
  "platform/static",
  "platform/utils",
  "platform/transformations",
]
