[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[project]
name = "evedata-docs"
version = "0.1.0"
description = "Documentation for EVEData"
readme = "README.md"
authors = [{name = "Corvin Vale", email = "corvin@valeant.space"}]
requires-python = ">=3.13"
dependencies = [
  "mkdocs-glightbox>=0.4.0",
  "mkdocs-material[git,imaging,recommended]>=9.6.15",
]

[dependency-groups]
dev = [
  "codespell[toml]>=2.4.1",
  "ruff>=0.12.3",
  "tomli>=2.2.1"
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
  "ASYNC", # flake8-async
  "B", # bugbear
  "B9",
  "C4", # flake8-comprehensions
  "E", # pycodestyle (error)
  "F", # pyflakes
  "FA", # flake8-future-annotations
  "I", # isort
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PYI", # flake8-pyi
  "RUF",
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "UP" # pyupgrade
]
ignore = [
  # only relevant if you run a script with `python -0`,
  # which seems unlikely for any of the scripts in this repo
  "B011",
  # Leave it to the formatter to split long lines and
  # the judgement of all of us.
  "E501"
]

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
known-first-party = ["docs"]
required-imports = ["from __future__ import annotations"]
