[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[project]
name = "evedata-docs"
version = "0.0.0"
description = "EVEData documentation"
readme = "README.md"
authors = [{ name = "Corvin Vale", email = "corvin@valeant.space" }]
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.13"
dependencies = [
  "mkdocs-git-authors-plugin>=0.10.0",
  "mkdocs-git-revision-date-localized-plugin>=1.4.7",
  "mkdocs-glightbox>=0.4.0",
  "mkdocs-material[imaging]>=9.6.15",
  "mkdocs-rss-plugin>=1.17.3",
  "python-dotenv>=1.1.1",
]

[tool.codespell]
check-filenames = true
check-hidden = true

[tool.pyright]
strict = ["scripts"]
venvPath = ".."
venv = ".venv"
exclude = ["**/.*", "**/__pycache__", "**/node_modules"]

[tool.uv]
package = false
required-version = ">=0.8.0,<0.9"
